--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -2,10 +2,10 @@
 other = "On this page"
 
 [series_posts]
-other = "More "
+other = "More"
 
 [all_rights]
 other = "All Rights Reserved"
 
 [powered_by]
-other = "Powered by Hugo, Clarity, GitLab, and Netlify"
+other = "Powered by" 
