minor search tweaks

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -20,7 +20,7 @@ other = "View source"
 other = "No matches found"
 
 [quick_links]
-other = "Quick links"
+other = "Quick results"
 
 [search_field_placeholder]
 other = "Search"
