--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -33,3 +33,6 @@ other = "Query is too short"
 
 [type_to_search]
 other = "Type to search"
+
+[old_content]
+other = "What you're about to read hasn't been updated in more than a year. The information may be out of date. Drop a comment below if you find something that needs updating."
