--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -34,5 +34,8 @@ other = "Query is too short"
 [type_to_search]
 other = "Type to search"
 
-[old_content]
+[old_content_label]
+other = "Technology keeps moving but this post has not."
+
+[old_content_note]
 other = "What you're about to read hasn't been updated in more than a year. The information may be out of date. Drop a comment below if you find something that needs updating."
