update footer, include analytics link

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -39,3 +39,9 @@ other = "Technology keeps moving but this post has not."
 
 [old_content_note]
 other = "What you're about to read hasn't been updated in more than a year. The information may be out of date. Drop a comment below if you find something that needs updating."
+
+[privacy_friendly]
+other = "Privacy-friendly"
+
+[analytics_with]
+other= "analytics with"
